--- a/demo.html
+++ b/demo.html
@@ -11,64 +11,44 @@
             padding: 0;
         }
         #map {
-            height: 80%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
 <div id="map"></div>
-<?php
-
-include "data_retrive_tmptable.inc";
-$hello =new data_retrive_tmptable();
-
-?>
-
 <script>
-        var x ='<?php echo($hello->get_data());?>';//
-        var xx = JSON.parse(x);
-        console.log(xx);
+
     // This example creates a 2-pixel-wide red polyline showing the path of William
     // Kingsford Smith's first trans-Pacific flight between Oakland, CA, and
     // Brisbane, Australia.
 
     function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 5,
-            center: {lat:8.728633,lng:79.146868},
+            zoom: 3,
+            center: {lat: 0, lng: -180},
             mapTypeId: google.maps.MapTypeId.TERRAIN
         });
 
-        var flightPlanCoordinates = xx;
+        var flightPlanCoordinates = [
+            {lat: 37.772, lng: -122.214},
+            {lat: 21.291, lng: -157.821},
+            {lat: -18.142, lng: 178.431},
+            {lat: -27.467, lng: 153.027}
+        ];
         var flightPath = new google.maps.Polyline({
             path: flightPlanCoordinates,
             geodesic: true,
-            strokeColor: '#04B431',
+            strokeColor: '#FF0000',
             strokeOpacity: 1.0,
             strokeWeight: 2
         });
+
         flightPath.setMap(map);
-
-        var te =1;
-        if(te ==1) {
-            for (var i = 0; i < xx.length; i++) {
-                if(i==0 || i==xx.length-1) {
-                    new google.maps.Marker({
-                        map: map,
-
-                        position: xx[i],
-                        strokeWeight: 1,
-                        strokeColor: '#000000',
-                        title: "Point "
-                    });
-                }
-            }
-        }
     }
-
 </script>
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
 </script>
 </body>
 </html>
